kube/settings/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  namespace: webapp
  labels:
    app: startlens
  name: startlens
spec:
  replicas: 3
  selector:
    matchLabels:
      app: startlens
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: startlens
    spec:
      containers:
      - image: 328517882653.dkr.ecr.ap-northeast-1.amazonaws.com/startlens/backend-app:v1.0
        imagePullPolicy: Always
        name: webapp
        command: ["bundle", "exec", "rails", "s", "-e", "production"]
        ports:
        - containerPort: 3000
        resources: {}
status: {}
