kube/settings/service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: startlens-lb
  namespace: webapp
spec:
  type: LoadBalancer
  selector:
    app: startlens
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
