kube/settings/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: startlens
  namespace: webapp
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: startlens
          servicePort: 3000
